--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "egg-passport-github": "^1.0.0",
     "egg-redis": "^2.0.0",
     "egg-scripts": "^2.5.0",
+    "egg-socket.io": "^4.0.8",
     "egg-validate": "^1.0.0",
     "egg-view-nunjucks": "^2.2.0",
     "stream-wormhole": "^1.0.4"
